<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EVPSCB</string>
    <string name="app_name_test">EVP Test</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>
    <string name="dateTime">Date/Time</string>
    <string name="placeholder">:)</string>
    <string name="sec">s</string>
    <string name="ad">Ad</string>
    <string name="ad_widget_label">Ad</string>
    <string name="amount_widget_label">Amount</string>
    <string name="go_system_setting_date">Go System Time Setting</string>
    <string name="base_amount">Base Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="tip_amount">Tips</string>
    <string name="trans_oriDate">Original Transaction Date</string>
    <string name="has_trans_for_settle">Please Settle Firstly</string>
    <string name="amount_default">0</string>
    <string name="amount_confirmation">Amount Confirmation</string>
    <string name="quick_pass_sale_free_pin">Sale by PIN</string>
    <string name="demo_mode">****Demo Mode****</string>
    <string name="paperless">Paperless</string>
    <string name="trans_sale">Sale</string>
    <string name="trans_void">Void</string>
    <string name="trans_adjust">Adjust</string>
    <string name="trans_offline">Offline</string>
    <string name="trans_preAuth">Pre-Auth</string>
    <string name="trans_preAuthCancel">Pre-Auth Cancellation</string>
    <string name="trans_preAuthComplete">Pre-Auth Completion</string>
    <string name="trans_refund">Refund</string>
    <string name="trans_echo">Echo</string>
    <string name="trans_settle">Settlement</string>
    <string name="trans_batch_up">Batch Upload</string>
    <string name="trans_settle_end">Settlement End</string>
    <string name="trans_offline_send">Offline</string>
    <string name="trans_history">History</string>
    <string name="trans_password">Password</string>
    <string name="trans_signature">Signature</string>
    <string name="trans_user_agreement">User Agreement</string>
    <string name="trans_reprint">Reprint</string>
    <string name="trans_manage">Management</string>
    <string name="trans_scan">Scan</string>
    <string name="print_menu">Print</string>
    <string name="history_total">Total</string>
    <string name="history_detail">Detail</string>
    <string name="history_detail_type">Type</string>
    <string name="history_detail_issuer">Card Type</string>
    <string name="history_detail_card_no">Card NO.</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_auth_code">App. Code</string>
    <string name="history_detail_trace_no">Trace NO.</string>
    <string name="history_detail_ref_no">Reference NO.</string>
    <string name="history_detail_state">State</string>
    <string name="history_summary_ref_no">Reference NO.:</string>
    <string name="history_menu_search">Search</string>
    <string name="history_menu_print_trans_last">Print Last</string>
    <string name="history_menu_print_trans_detail">Print Detail</string>
    <string name="history_menu_print_trans_total">Print Summary</string>
    <string name="history_menu_print_last_total">Print Last Settle</string>
    <string name="wallet">Wallet</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="suspended_qr">Suspended QR</string>
    <string name="any_transaction">Any Transaction</string>
    <string name="state_normal">Normal</string>
    <string name="state_voided">Voided</string>
    <string name="state_adjusted">Adjusted</string>
    <string name="state_uploaded">Uploaded</string>
    <string name="state_not_sent">Not Sent</string>
    <string name="state_sent_error">Send Error</string>
    <string name="state_response_error">Response Error</string>
    <string name="state_unknow_error">Unknown Error</string>
    <string name="settle_acquirer_name">Acquirer Name</string>
    <string name="settle_merchant_name">Merchant Name</string>
    <string name="settle_merchant_id">Merchant NO.</string>
    <string name="settle_terminal_id">Terminal NO.</string>
    <string name="settle_batch_id">Batch NO.</string>
    <string name="settle_trans_type">Trans Type</string>
    <string name="settle_trans_times">Trans Times</string>
    <string name="settle_amount">Amount</string>
    <string name="settle_print_detail_or_not">Print Settle Detail Or Not?</string>
    <string name="settle_print_fail_detail_or_not">Print Fail Detail Or Not?</string>
    <string name="settle_select_acquirer">Select Acquirer</string>
    <string name="settle_total_void_sale">Voided Sale</string>
    <string name="settle_total_void_refund">Voided Refund</string>
    <string name="settle_all_selected">Settle</string>
    <string name="settle_total_offline">Offline</string>
    <string name="settle_settled">Settled</string>
    <string name="pwd_merchant">Merchant</string>
    <string name="pwd_terminal">Terminal</string>
    <string name="pwd_void">Void</string>
    <string name="pwd_refund">Refund</string>
    <string name="pwd_adjust">Adjust</string>
    <string name="pwd_settle">Settlement</string>
    <string name="pwd_old_pwd">Old Password</string>
    <string name="pwd_new_pwd">New Password</string>
    <string name="pwd_not_equal">Not Matched, Please Enter Again</string>
    <string name="pwd_verify_new_pwd">Verify New Password</string>
    <string name="pwd_succ">Success</string>
    <string name="pwd_incorrect_length">Request 6 Digits</string>
    <string name="signature_clear">Clear</string>
    <string name="signature_done">Enter</string>
    <string name="signature_redo">Signature Data Is Too Long,Please Re-sign</string>
    <string name="user_agreement_agree">Agree</string>
    <string name="print_history_detail">Transaction Detail List</string>
    <string name="print_settle_detail">Settle Detail List</string>
    <string name="print_history_total">Transaction Total List</string>
    <string name="print_last_total">Last Transaction Total List</string>
    <string name="print_offline_send_failed">Failed Offline Send Detail List</string>
    <string name="last_settlement">Last Settlement</string>
    <string name="prompt_merchant_pwd">Please Enter Merchant Password</string>
    <string name="prompt_terminal_pwd">Please Enter Terminal Password</string>
    <string name="prompt_void_pwd">Please Enter Void Password</string>
    <string name="prompt_refund_pwd">Please Enter Refund Password</string>
    <string name="prompt_adjust_pwd">Please Enter Adjust Password</string>
    <string name="prompt_settle_pwd">Please Enter Settle Password</string>
    <string name="prompt_sys_pwd">Please Enter System Administrator Password</string>
    <string name="prompt_pin">Please Enter PIN</string>
    <string name="prompt_no_pin">If No PIN, Please Press Enter</string>
    <string name="prompt_offline_pin">Please Enter PIN</string>
    <string name="prompt_auth_code">Please Enter Approval Code</string>
    <string name="prompt_lock_terminal">Lock Terminal?</string>
    <string name="prompt_insert_swipe_wave_card">Please Swipe/Insert/Tap Card</string>
    <string name="prompt_insert_card">Please Insert Card</string>
    <string name="prompt_swipe_card">Please Swipe Card</string>
    <string name="prompt_wave_card">Please Wave Card</string>
    <string name="prompt_insert_swipe_card">Please Swipe/Insert Card</string>
    <string name="prompt_please_retry">Read Card Failed, Please Retry</string>
    <string name="prompt_input_mode_params_error">Card Parameters Error</string>
    <string name="prompt_ic_card_input">The Card Is IC Card, Please Insert Card!</string>
    <string name="prompt_card_date">Card Date</string>
    <string name="prompt_card_num">Card No.</string>
    <string name="prompt_card_date_err">Date Format Error, Please Check!</string>
    <string name="prompt_card_num_err">Card Number Error, Please Check!</string>
    <string name="prompt_card_num_manual">Or Enter Card Number Manually</string>
    <string name="prompt_date_default">MM/YY</string>
    <string name="prompt_default_searchCard_prompt">Please Use Your Bank Card</string>
    <string name="prompt_confirm_card_info">Please Confirm Card Information</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="prompt_no_sms">Unable to send SMS</string>
    <string name="prompt_phone_number">Please Input Phone Number:</string>
    <string name="prompt_email_address">Please Input Email Account:</string>
    <string name="prompt_fall_back">Please Remove Card, then Swipe Card</string>
    <string name="alipay">Alipay</string>
    <string name="wechat">Wechat</string>
    <string name="prompt_pay">PromptPay</string>
    <string name="line_pay">LinePay</string>
    <string name="true_money">TrueMoney</string>
    <string name="shopee">Shopee</string>
    <string name="dolfin">Dolfin</string>
    <string name="qrcs">QRCS</string>
    <string name="prompt_input_transno">Please Enter Original Trans NO.</string>
    <string name="prompt_input_tran_ref">Please Enter Trans Ref.</string>
    <string name="prompt_input_ref1">Please Enter Reference 1</string>
    <string name="prompt_input_ref3">Please Enter Reference 3</string>
    <string name="prompt_input_orig_refer">Original Transaction Reference NO.</string>
    <string name="prompt_input_amount">Amount:</string>
    <string name="prompt_input_refund_amount">Refund Amount:</string>
    <string name="prompt_input_auth_code">Authorization Code</string>
    <string name="prompt_input_date">Original Transaction Date</string>
    <string name="please_input_again">Please Enter Again</string>
    <string name="prompt_date_default2">MM/DD</string>
    <string name="prompt_get_last">Click OK to Get Last Transaction</string>
    <string name="prompt_input_ipp_term">Installment #Month</string>
    <string name="prompt_base_amount">Base</string>
    <string name="prompt_tip">Tip</string>
    <string name="prompt_ori_tips">Original Tip</string>
    <string name="prompt_tip_not_changed">Tip not changed</string>
    <string name="prompt_adjust_percent">Tip percent</string>
    <string name="prompt_new_tips">New Tip</string>
    <string name="prompt_total_amount">Total Amount</string>
    <string name="prompt_tip_exceed">tip amount over limit</string>
    <string name="payment_icon">Payment Icon</string>
    <string name="suspend_pay">Pay</string>
    <string name="suspend_delete">Delete</string>
    <string name="delete_suspend_qr">Delete Suspended QR</string>
    <string name="pull_slip">Pull Slip</string>
    <string name="select_report_type">Select Report Type</string>
    <string name="summary_report">Summary Report</string>
    <string name="audit_report">Audit Report</string>
    <string name="all_payment_channel">All Payment Channel</string>
    <string name="select_payment_channel">Select Payment Channel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_sms">SMS</string>
    <string name="dialog_email">Email</string>
    <string name="sale_pay">PAY</string>
    <string name="sale_select_qr">QR</string>
    <string name="sale_select_scan">Scan</string>
    <string name="sale_select_card">Card</string>
    <string name="query_last_transaction">Last Transaction</string>
    <string name="query_suspended_transaction">Suspended Transaction</string>
    <string name="query_any_transaction">Any Transaction</string>
    <string name="history_detail_point">Point</string>
</resources>