<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="?attr/listPreferredItemPaddingStart">

        <Button
            android:id="@+id/last_transaction_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg_light"
            android:text="@string/query_last_transaction"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/suspended_transaction_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg_light"
            android:layout_marginTop="10dp"
            android:text="@string/query_suspended_transaction"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/any_transaction_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg_light"
            android:text="@string/query_any_transaction"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/pull_slip_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg_light"
            android:text="@string/pull_slip"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>